--- a/Dockerfiles/CPU/Dockerfile
+++ b/Dockerfiles/CPU/Dockerfile
@@ -9,6 +9,6 @@ RUN apt install python3-pip -y
 COPY code.py /root/code.py
 COPY requirements.txt /root/requirements.txt
 RUN touch __innit__.py
-RUN cd root && pip3 install -r requirements.txt
+RUN cd /root && pip3 install -r requirements.txt
 RUN mkdir -p /Volumes/PHD
 CMD ["cd root", "python3 -c "from code import *; iterateBlur()""]
